--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding: 80px 0;
+  overflow-x: hidden;
+  padding: 80px 16px;
   width: 1000px;
 }
 
@@ -134,4 +135,70 @@ p {
   line-height: 32px;
   margin: 0;
   white-space: pre-line;
+}
+
+span {
+  color: #AAA;
+}
+
+@media (max-width: 1000px) {
+  .app-wrapper {
+    padding: 40px 16px;
+  }
+
+  .app-section__vertical-spacing {
+    height: 20px;
+  }
+
+  .app-section__horizontal-spacing {
+    height: 20px;
+    width: 0;
+  }
+
+  .app-section__row {
+    flex-direction: column;
+  }
+
+  .app-section__white-divider,
+  .app-section__yellow-divider,
+  .app-section__red-divider,
+  .app-section__blue-divider {
+    height: 4px;
+  }
+
+  .app-section__white-heading,
+  .app-section__yellow-heading,
+  .app-section__red-heading, 
+  .app-section__blue-heading {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 40px;
+    line-height: 40px;
+  }
+
+  h2 {
+    font-size: 28px;
+    line-height: 40px;
+  }
+
+  h3 {
+    font-size: 20px;
+    line-height: 32px;
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .app-section__medium-text-column {
+    width: 100%;
+  }
+  
+  .app-section__small-text-column {
+    width: 100%;
+  }
 }
