--- a/src/App.css
+++ b/src/App.css
@@ -164,7 +164,7 @@ span {
   .app-section__yellow-divider,
   .app-section__red-divider,
   .app-section__blue-divider {
-    height: 4px;
+    height: 2px;
   }
 
   .app-section__white-heading,
@@ -193,6 +193,11 @@ span {
   p {
     font-size: 16px;
     line-height: 24px;
+  }
+
+  .app-section__logo {
+    height: 40px;
+    width: 40px;
   }
 
   .app-section__column {
