--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -17,6 +21,8 @@ code {
   src: local("BroadSansBold"),
     url("./fonts/BroadSans/BroadSans-Bold.woff") format("truetype");
   font-weight: 700;
+  font-display: swap;
+  font-style: normal;
 }
 
 @font-face {
@@ -24,4 +30,12 @@ code {
   src: local("PinopolisRegular"),
     url("./fonts/Pinopolis/Pinopolis-Regular.woff") format("truetype");
   font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+
+@layer base {
+  html {
+    font-family: 'Helvetica Neue', system-ui, sans-serif;
+  }
 }
