--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,7 @@
   }
 
   body {
+    font-variant-ligatures: none;
     margin: 0;
     background-color: #000;
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
